# jobs-scrapper-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  source-health.yml
hirehunt/: README.md  __init__.py  cli.py  engine.py  filtering.py  models.py  policies.py  query.py  ranking.py  registry.py  validation.py
hirehunt/scrapers/: base.py  faang.py  indeed.py  internshala.py  linkedin.py  naukri.py  shine.py  unstop.py
hirehunt/utils/: dedupe.py  fetchers.py  http.py  normalization.py
jobhunter/: __init__.py  cli.py  engine.py  exceptions.py  filtering.py  models.py  query.py  ranking.py  registry.py  validation.py
jobhunter/scrapers/: __init__.py  base.py  indeed.py  internshala.py  linkedin.py  unstop.py
jobhunter/utils/: cache.py  fetchers.py  http.py  normalization.py
tests/: test_dedupe_filter_rank.py  test_filter_matrix.py  test_framework_contracts.py  test_normalization.py  test_parsers.py  test_v02_features.py
tests/fixtures/: internshala_search.html  linkedin_search.html  source_items.json
