[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunter"
version = "0.1.0"
description = "A programmable job search framework with global sources, regional opportunity support, filters, ranking, and deduplication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "pandas>=2.0.0",
  "python-dateutil>=2.8.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "rich>=13.0.0",
  "urllib3>=2.0.0",
]

[project.scripts]
jobhunter = "jobhunter.cli:main"

[tool.setuptools.packages.find]
include = ["jobhunter*"]
