[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hirehunt"
version = "0.3.0"
description = "A programmable job-scraping framework for India & global markets. Aggregates Naukri, Shine, Internshala, LinkedIn, Indeed, and FAANG companies into a unified dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "pandas>=2.0.0",
  "python-dateutil>=2.8.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "rich>=13.0.0",
  "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = ["build>=1.2.0", "twine>=5.0.0"]

[project.scripts]
hirehunt = "hirehunt.cli:main"

[tool.setuptools.packages.find]
include = ["hirehunt*", "jobhunter*"]
